--- a/imap2kb/Dockerfile
+++ b/imap2kb/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3-slim as build
-LABEL maintainer="adam.dobrawy{at}siecobywatelska.pl"
+LABEL maintainer="timothe{at}quango.fr"
 
-WORKDIR /usr/src/app
+WORKDIR /usr/src/imap2kb
 COPY requirements.txt ./
 RUN apt-get update \
  && apt-get install -y --no-install-recommends g++ \
@@ -11,6 +11,7 @@ RUN apt-get update \
  && apt-get remove -y g++ && apt-get autoremove -y
 ENV PYTHONUNBUFFERED=1
 COPY . .
+COPY ./config ./config
 
 # Testing
 FROM build as testing
