--- a/imap2kb/.travis.yml
+++ b/imap2kb/.travis.yml
@@ -3,7 +3,7 @@ language: python
 python: "3.6"
 
 install:
-- pip install -r .imap2kb/requirements.txt
+- pip install -r requirements.txt
 
 script:
 - python test.py
