--- a/imap2kb/requirements.txt
+++ b/imap2kb/requirements.txt
@@ -2,5 +2,7 @@ requests==2.22.0
 mail-parser==3.9.3
 html2text==2019.8.11
 talon==1.4.4
-ipdb==0.12.2
+ipdb==0.12.3
 raven==6.10.0
+kanboard==1.1.3
+concurrent-log-handler==0.9.19
